RESOLVED FIXED169035
[WTF] va_list is not ended in StringPrintStream
https://bugs.webkit.org/show_bug.cgi?id=169035
Summary [WTF] va_list is not ended in StringPrintStream
Tomas Popela
Reported 2017-03-01 06:08:32 PST
Detected by Coverity scan: 1. webkitgtk-2.14.5/Source/WTF/wtf/StringPrintStream.cpp:57: va_init: Initializing va_list "firstPassArgList". 4. webkitgtk-2.14.5/Source/WTF/wtf/StringPrintStream.cpp:83: missing_va_end: va_end was not called for "firstPassArgList". # 81| ASSERT_WITH_SECURITY_IMPLICATION(m_next < m_size); # 82| ASSERT(!m_buffer[m_next]); # 83|-> } # 84| # 85| CString StringPrintStream::toCString()
Attachments
Patch (3.26 KB, patch)
2017-03-01 06:12 PST, Tomas Popela
no flags
Tomas Popela
Comment 1 2017-03-01 06:12:18 PST
Michael Saboff
Comment 2 2017-03-01 07:37:26 PST
Comment on attachment 303065 [details] Patch r=me
Tomas Popela
Comment 3 2017-03-01 07:45:52 PST
Comment on attachment 303065 [details] Patch Clearing flags on attachment: 303065 Committed r213223: <http://trac.webkit.org/changeset/213223>
Tomas Popela
Comment 4 2017-03-01 07:46:03 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.