[WTF] va_list is not ended in StringPrintStream https://bugs.webkit.org/show_bug.cgi?id=169035

Reviewed by Michael Saboff.

Also fix whitespace errors while touching this file.

* wtf/StringPrintStream.cpp:
(WTF::StringPrintStream::vprintf):
(WTF::StringPrintStream::increaseSize):

Canonical link: https://commits.webkit.org/186021@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213223 268f45cc-cd09-0410-ab3c-d52691b4dbfc